tests/integration/fail/enum_contract_empty_enum.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::BlameError'
'foo | [| |]
